[package]
name = "rust_vs_zombies"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["dylib"]

[dependencies]
pvz = {git = "https://github.com/HenryJk/PvZLib", branch = "rust"}
winapi = { version = "0.3.9", features = ["processthreadsapi", "memoryapi", "libloaderapi"] }
byteorder = "1.4.3"
iced-x86 = { version = "1.16.0", features = ["code_asm"]}
rand = "0.8.5"