[package]
name = "rust_vs_zombies"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["dylib"]

[dependencies]
pvz = {git = "https://github.com/HenryJk/PvZLib", branch = "rust"}
iced-x86 = { version = "1.16.0", features = ["code_asm"]}
rand = "0.8.5"

[dependencies.windows]
version = "0.33.0"
features = [
    "Win32_System_Memory",
    "Win32_Foundation", 
    "Win32_System_SystemServices",
]


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"